--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <article>
             <header>
               <!-- Article's header goes here -->
-              <h2>Ten Amusing Facts About Dogs</h2>
-              <h3>Read time: 5 minutes</h3>
+              <h2>ALL Amusing Facts About Dogs</h2>
+              <h3>Read time: 500 minutes</h3>
             </header>
             <main>
               <p>
