--- a/index.html
+++ b/index.html
@@ -2,25 +2,34 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BrightBlogSite</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <!-- the content of the header goes here -->
-      <h1 id="logo">Bright Blog</h1>
+      <h1 id="logo">Blessed 2 Chef</h1>
       <nav>
         <ul id="nav-ul">
           <li>
-            <a href="" class="navbutton">Home</a>
+            <a href="" class="navbutton">HOME</a>
           </li>
           <li>
-            <a href="" class="navbutton">About Us</a>
+            <a href="" class="navbutton">RECIPES</a>
           </li>
           <li>
-            <a href="" class="navbutton">Contact</a>
+            <a href="" class="navbutton">ABOUT</a>
+          </li>
+          <li>
+            <a href="" class="navbutton">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -31,31 +40,17 @@
           <article>
             <header>
               <!-- Article's header goes here -->
-              <h2>ALL Amusing Facts About Dogs</h2>
-              <h3>Read time: 500 minutes</h3>
+              <h2>A TASTE IS ONLY A CLICK AWAY...</h2>
             </header>
             <main>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Doloremque quisquam ullam labore, in eveniet quasi id
-                consequatur, odio similique asperiores dolor? Numquam inventore
-                officia ex laborum velit neque obcaecati quae!
-              </p>
-              <blockquote>
-                <cite>"I love <a href="">puppies</a>! - Awosola, 2024</cite>
-              </blockquote>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Tempore, placeat soluta, saepe, veritatis sequi sunt pariatur
-                tenetur in enim et vel cupiditate cum tempora eaque dolores rem!
-                Quidem vero obcaecati ut, nihil accusantium error illum, facere
-                enim iste repudiandae, excepturi nobis sequi blanditiis beatae.
-                Repellendus consequuntur nostrum neque praesentium maiores.
-                Aliquid error, ipsum sit, quo inventore fuga cupiditate maxime
-                doloribus non delectus adipisci consectetur. Sit nisi dolor unde
-                quo asperiores, debitis, totam quisquam sequi adipisci tenetur
-                ad non deleniti similique.
-              </p>
+              <!--Images of food-->
+
+              <img src="Nigerian Puff Puff.jpg" alt="A picture of puff puff" />
+              <img src="Fried rice.jpg" alt="A picture of fried rice" /><img
+                src="chocolate-cake.jpg"
+                alt="A picture of chocolate-cake"
+              />
+
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. A
                 fugiat dignissimos eum debitis laborum, expedita adipisci
@@ -80,135 +75,8 @@
             </main>
             <footer>
               <h2>Author: Feyi Awosola</h2>
-              <img
-                src="https://placebear.com/100/100"
-                alt="Profile pic of an image of a bear swimming"
-              />
-              <h3>Last posted: 01-08-2024</h3>
-              <a href="https://www.brightnetwork.co.uk" target="_blank"
-                >Author Profile</a
-              >
-            </footer>
-          </article>
-          <article>
-            <header>
-              <!-- Article's header goes here -->
-              <h2>Ten Amusing Facts About Dogs</h2>
-              <h3>Read time: 5 minutes</h3>
-            </header>
-            <main>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Doloremque quisquam ullam labore, in eveniet quasi id
-                consequatur, odio similique asperiores dolor? Numquam inventore
-                officia ex laborum velit neque obcaecati quae!
-              </p>
-              <blockquote>
-                <cite>"I love <a href="">puppies</a>! - Awosola, 2024</cite>
-              </blockquote>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Tempore, placeat soluta, saepe, veritatis sequi sunt pariatur
-                tenetur in enim et vel cupiditate cum tempora eaque dolores rem!
-                Quidem vero obcaecati ut, nihil accusantium error illum, facere
-                enim iste repudiandae, excepturi nobis sequi blanditiis beatae.
-                Repellendus consequuntur nostrum neque praesentium maiores.
-                Aliquid error, ipsum sit, quo inventore fuga cupiditate maxime
-                doloribus non delectus adipisci consectetur. Sit nisi dolor unde
-                quo asperiores, debitis, totam quisquam sequi adipisci tenetur
-                ad non deleniti similique.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. A
-                fugiat dignissimos eum debitis laborum, expedita adipisci
-                commodi, doloremque consectetur minima labore veritatis quidem
-                voluptatum, porro maiores sapiente aspernatur dolores numquam
-                excepturi mollitia placeat. Eaque explicabo ea molestiae illo
-                tempore quos voluptate est, provident quia sunt, error a iste
-                perspiciatis unde non possimus, harum suscipit. Pariatur
-                eveniet, voluptate veniam adipisci tempore sunt quisquam
-                quibusdam culpa eum ad, deserunt corporis iusto? Reprehenderit
-                rem quis officiis ipsum quaerat nam magni mollitia facere soluta
-                quam voluptates delectus dicta minus natus dolorum repellendus
-                ea blanditiis, consequuntur impedit, sint quo esse. Aspernatur
-                minus ea quas eligendi eum suscipit iure nisi perferendis
-                cupiditate quidem iste ipsa sunt tenetur, nihil eaque dicta enim
-                voluptas quasi non quae autem laudantium illo. Consectetur nulla
-                vitae possimus corporis fugit dolores odio accusantium optio,
-                ratione incidunt tenetur, consequatur quas veritatis illo. Hic
-                sapiente quod ex possimus tempore obcaecati facilis, minus
-                expedita vel!
-              </p>
-            </main>
-            <footer>
-              <h2>Author: Feyi Awosola</h2>
-              <img
-                src="https://placebear.com/100/100"
-                alt="Profile pic of an image of a bear swimming"
-              />
-              <h3>Last posted: 01-08-2024</h3>
-              <a href="https://www.brightnetwork.co.uk" target="_blank"
-                >Author Profile</a
-              >
-            </footer>
-          </article>
-          <article>
-            <header>
-              <!-- Article's header goes here -->
-              <h2>Ten Amusing Facts About Dogs</h2>
-              <h3>Read time: 5 minutes</h3>
-            </header>
-            <main>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Doloremque quisquam ullam labore, in eveniet quasi id
-                consequatur, odio similique asperiores dolor? Numquam inventore
-                officia ex laborum velit neque obcaecati quae!
-              </p>
-              <blockquote>
-                <cite>"I love <a href="">puppies</a>! - Awosola, 2024</cite>
-              </blockquote>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Tempore, placeat soluta, saepe, veritatis sequi sunt pariatur
-                tenetur in enim et vel cupiditate cum tempora eaque dolores rem!
-                Quidem vero obcaecati ut, nihil accusantium error illum, facere
-                enim iste repudiandae, excepturi nobis sequi blanditiis beatae.
-                Repellendus consequuntur nostrum neque praesentium maiores.
-                Aliquid error, ipsum sit, quo inventore fuga cupiditate maxime
-                doloribus non delectus adipisci consectetur. Sit nisi dolor unde
-                quo asperiores, debitis, totam quisquam sequi adipisci tenetur
-                ad non deleniti similique.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. A
-                fugiat dignissimos eum debitis laborum, expedita adipisci
-                commodi, doloremque consectetur minima labore veritatis quidem
-                voluptatum, porro maiores sapiente aspernatur dolores numquam
-                excepturi mollitia placeat. Eaque explicabo ea molestiae illo
-                tempore quos voluptate est, provident quia sunt, error a iste
-                perspiciatis unde non possimus, harum suscipit. Pariatur
-                eveniet, voluptate veniam adipisci tempore sunt quisquam
-                quibusdam culpa eum ad, deserunt corporis iusto? Reprehenderit
-                rem quis officiis ipsum quaerat nam magni mollitia facere soluta
-                quam voluptates delectus dicta minus natus dolorum repellendus
-                ea blanditiis, consequuntur impedit, sint quo esse. Aspernatur
-                minus ea quas eligendi eum suscipit iure nisi perferendis
-                cupiditate quidem iste ipsa sunt tenetur, nihil eaque dicta enim
-                voluptas quasi non quae autem laudantium illo. Consectetur nulla
-                vitae possimus corporis fugit dolores odio accusantium optio,
-                ratione incidunt tenetur, consequatur quas veritatis illo. Hic
-                sapiente quod ex possimus tempore obcaecati facilis, minus
-                expedita vel!
-              </p>
-            </main>
-            <footer>
-              <h2>Author: Feyi Awosola</h2>
-              <img
-                src="https://placebear.com/100/100"
-                alt="Profile pic of an image of a bear swimming"
-              />
-              <h3>Last posted: 01-08-2024</h3>
+
+              <h3>Last posted: 15-09-2024</h3>
               <a href="https://www.brightnetwork.co.uk" target="_blank"
                 >Author Profile</a
               >
@@ -218,23 +86,13 @@
 
         <aside>
           <section>
-            <h4>Filter By Month</h4>
-            <nav>
-              <ul>
-                <li><a href=""></a>Filter for January</li>
-                <li><a href=""></a>Filter for February</li>
-                <li><a href=""></a>Filter for March</li>
-              </ul>
-            </nav>
-          </section>
-          <section>
-            <h4>Filter by Category</h4>
+            <h4>Filter by Recipes</h4>
             <nan>
               <ul>
-                <li><a href="">Puppies</a></li>
-                <li><a href="">Dogs</a></li>
-                <li><a href="">Cats</a></li>
-                <li><a href="">Hedgehogs</a></li>
+                <li><a href="">Starter</a></li>
+                <li><a href="">Main</a></li>
+                <li><a href="">Dessert</a></li>
+                <li><a href="">Beverage</a></li>
               </ul>
             </nan>
           </section>
@@ -261,18 +119,23 @@
         <input type="password" name="password" id="password" />
         <br />
 
-        <label for="favourite_animal">Favourite Animal:</label>
-        <input type="radio" name="favourite_animal" id="dog" value="dog" />
-        <label for="dog">Dog</label>
-        <input type="radio" name="favourite_animal" id="cat" value="cat" />
-        <label for="cat">Cat</label>
+        <label for="favourite_recipes">Favourite Recipes:</label>
         <input
           type="radio"
-          name="favourite_animal"
-          id="hedgehogs"
-          value="hedgehogs"
+          name="favourite_recipes"
+          id="starter"
+          value="starter"
         />
-        <label for="hedgehogs">Hedgehogs</label>
+        <label for="starter">Starter</label>
+        <input type="radio" name="favourite_recipes" id="main" value="main" />
+        <label for="main">Main</label>
+        <input
+          type="radio"
+          name="favourite_recipes"
+          id="dessert"
+          value="dessert"
+        />
+        <label for="dessert">Dessert</label>
         <br />
 
         <label for="country">Country:</label>
@@ -282,9 +145,7 @@
           <option value="wales">Wales</option>
           <option value="northen_ireland">Northern Ireland</option>
         </select>
-        <br />
-        <label for="bio">Biography:</label>
-        <textarea name="" id="" cols="30" rows="5"> </textarea>
+
         <br />
         <input type="checkbox" name="subscribe" id="subscribe" />
         <label for="subscribe">Subscribe to our newsletter!</label>
@@ -297,20 +158,13 @@
 
     <footer>
       <!-- footer goes here -->
-
-      <h2>BrightBlogSite</h2>
       <section>
+        <footer id="copy">&copy; 2024Feyi Awosola</footer>
         <nav>
           <ul id="footer-ul">
             <div>
-              <li><a href="">Home</a></li>
-              <li><a href="">About Us</a></li>
               <li><a href="">Contact</a></li>
-              <li><a href="">Career</a></li>
-            </div>
-            <div>
               <li><a href="">Privacy Policy</a></li>
-              <li><a href="">Tearms and Conditions</a></li>
               <li><a href="">Cookie Policy</a></li>
             </div>
           </ul>
